--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -4,10 +4,9 @@ on:
     types: [created, edited, deleted]
 
 jobs:
-  build:
+  triage:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Che Triage Action
