--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,8 @@ name: CI
 on:
   issue_comment:
     types: [created, edited, deleted]
+  issues:
+    types: [opened, edited, milestoned]    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
