--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,10 @@ on:
   issue_comment:
     types: [created, edited, deleted]
   issues:
-    types: [opened, edited, milestoned]    
+    types: [opened, edited, deleted, transferred, closed, reopened, assigned, unassigned, labeled, unlabeled, milestoned, demilestoned]
+  pull_request:
+    types: [opened, edited, closed, assigned, unassigned, labeled, unlabeled, reopened, synchronize, ready_for_review, review_requested, review_request_removed]    
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
